--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.20.0",
+    "bulma": "^0.9.0",
     "eslint-plugin-react": "^7.20.6",
     "http-proxy-middleware": "^1.0.5",
     "node-sass": "^4.14.1",
