--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,11 @@
     "bulma": "^0.9.0",
     "eslint-plugin-react": "^7.20.6",
     "http-proxy-middleware": "^1.0.5",
+    "mapbox-gl": "^1.12.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-map-gl": "^5.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
